`Updated website assets and links to new URLs

--- a/En/Home.html
+++ b/En/Home.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="col-lg-6 intro-img order-lg-last order-first" data-aos="zoom-out" data-aos-delay="200">
-          <img src="../assets/img/intro-img.svg" alt="" class="img-fluid">
+          <img src="../assets/img/intro-img.png" alt="" class="img-fluid">
         </div>
       </div>
 
@@ -124,7 +124,7 @@
                   <li class="list-group-item">Assessment and Timely Feedback Opportunities</li>
                   <li class="list-group-item">Enhanced Student Collaboration and Communication</li>
                 </ul>
-                <a href="http://87.106.230.24/VSchool/" class="btn">LMS - Login</a>
+                <a href="https://nouralhikmavschool.com/vschool" class="btn">LMS - Login</a>
               </div>
             </div>
           </div>
@@ -145,7 +145,7 @@
                   <li class="list-group-item">Efficient Management of Student Records and Information</li>
                   <li class="list-group-item">Data-Driven Decision-Making For Improved School Operations</li>
                 </ul>
-                <a href="http://87.106.230.24:8080/" class="btn">SMS - Login</a>
+                <a href="https://nouralhikmavschool.com:8080/" class="btn">SMS - Login</a>
               </div>
             </div>
           </div>
