--- a/Home.html
+++ b/Home.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="col-lg-6 intro-img order-lg-last order-first" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/intro-img.svg" alt="صورة تعريفية" class="img-fluid">
+          <img src="assets/img/intro-img.png" alt="صورة تعريفية" class="img-fluid">
         </div>
 
       </div>
@@ -122,7 +122,7 @@
                   <li class="list-group-item">إتاحة التقييم وتقديم التغذية الراجعة في الوقت المناسب</li>
                   <li class="list-group-item">تعزيز التعاون والتواصل بين الطلاب</li>
                 </ul>
-                <a href="http://87.106.230.24/VSchool/" class="btn">تسجيل الدخول - LMS</a>
+                <a href="https://nouralhikmavschool.com/vschool" class="btn">تسجيل الدخول - LMS</a>
               </div>
             </div>
           </div>
@@ -143,7 +143,7 @@
                   <li class="list-group-item">إدارة فعالة لسجلات الطلاب ومعلوماتهم</li>
                   <li class="list-group-item">اتخاذ قرارات مبنية على البيانات لتحسين العمليات المدرسية</li>
                 </ul>
-                <a href="http://87.106.230.24:8080/" class="btn">تسجيل الدخول - SMS</a>
+                <a href="https://nouralhikmavschool.com:8080/" class="btn">تسجيل الدخول - SMS</a>
               </div>
             </div>
           </div>
